Add Email service

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -17,5 +17,12 @@
   },
   "AuthenticationSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
+  "SmtpSettings": {
+    "EmailFrom": "Laury Quigley",
+    "Host": "smtp.ethereal.email",
+    "Port": 587,
+    "User": "laury.quigley21@ethereal.email",
+    "Password": "ber5HGTnPQqPgqPJ6h"
   }
 }
