Add custom middlware, modify other code and remove wrappedcommand and wrappedconnection

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "Main": {
-      "ConnectionString": "Server=127.0.0.1; Port=3306;Database=APINETCORESample;User Id=root;password=;Persist Security Info=True;Allow Zero Datetime=True;CharSet=utf8;",
+      "ConnectionString": "Server=127.0.0.1; Port=3306;Database=APINETCORESample;User Id=root;password=;Persist Security Info=True;CharSet=utf8;Convert Zero Datetime=True;",
       "Adapter": "mysqlconnection"
     }
   },
