Rename and add some reference comments

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>d6d38831-4af2-47a0-9a13-731bca67aeb4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
